back to win confirm

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </ul>
                 </div>
                 <button class="btn">
-                    get tickets<i class="fa-solid fa-arrow-right-long"></i>
+                    tickets<i class="fa-solid fa-arrow-right-long"></i>
                 </button>
             </div>
         </div>
