--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- navbar -->
     <nav>
         <div class="container">
             <div class="row">
@@ -36,6 +37,7 @@
             </div>
         </div>
     </nav>
+    <!-- home -->
     <section class="home">
         <div class="overlay"></div>
         <div class="container">
@@ -52,6 +54,7 @@
         </div>
         </div>
     </section>
+    <!-- about -->
     <section class="about-conference">
         <div class="container"></div>
         <div class="up">
@@ -82,7 +85,7 @@
             </div>
         </div>
     </section>
-
+<!-- speak -->
     <section class="our-speakings">
         <div class="container">
             <div class="overlay"></div>
@@ -193,7 +196,7 @@
                 view all Speaker<i class="fa-solid fa-arrow-right-long"></i>
             </button></div>
     </section>
-
+<!-- time -->
     <section class="our-timetable">
         <div class="container">
             <div class="header">
@@ -289,7 +292,7 @@
             </div>
         </div>
     </section>
-
+<!-- tickets -->
     <section class="tickets">
         <div class="container">
             <div class="header">
@@ -360,7 +363,7 @@
             </div>
         </div>
     </section>
-
+<!-- spons -->
     <section class="sponsers">
         <div class="container">
             <div class="header">
@@ -445,7 +448,7 @@
             </div>
         </div>
     </section>
-
+<!-- blog -->
     <section class="blog">
         <div class="container">
             <div class="header">
@@ -501,7 +504,7 @@
             </div>
         </div>
     </section>
-
+<!-- contact -->
     <section class="contact">
         <div class="container">
             <div class="header">
@@ -540,7 +543,7 @@
             </div>
         </div>
     </section>
-
+<!-- footer -->
     <section class="footer">
         <div class="container">
             <div class="top">
