--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
                     <a class="nav-link" href="#contact">contact</a>
                 </li>
             </ul>
+            <div class="bottom row col-12">
+                <div class="text col-12">
+                    <p>Copyright ©2024 All rights reserved | This template is made with
+                        <i class="fa-sharp fa-light fa-heart"></i> by <span>Colorlib</span>
+                    </p>
+                </div>
+                <div class="list col-12">
+                    <ul>
+                        <li>Terms of Service</li>
+                        <i class="fa-solid fa-period"></i>
+                        <li>Privacy Policy</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -82,7 +96,7 @@
             <div class="container-fluid">
                 <div id="about" class="mainSec about row">
                     <div class="overlay"></div>
-                    <div class="textContent col-6">
+                    <div class="textContent col-12 col-md-6">
                         <h6>About Conference</h6>
                         <h3>Welcome to the <span>Project Management</span></h3>
                         <p>The Project Management is a platform to learn expert techniques for building successful
@@ -93,7 +107,7 @@
                             essential elements of project management.</p>
                         <button class="btn">interested<i class="fa-solid fa-arrow-right-long"></i></button>
                     </div>
-                    <div class="img col-4">
+                    <div class="img col-12 col-md-4">
                         <img src="img/2.png" alt="">
                     </div>
                 </div>
@@ -110,7 +124,7 @@
                         <h4>who's speaking</h4>
                     </div>
                     <div class="cards col-12 row">
-                        <div class="card col-3">
+                        <div class="card col-5 col-md-3">
                             <div class="img">
                                 <img src="img/5.jpg" alt="">
                             </div>
@@ -125,7 +139,7 @@
                                 <p>Founder</p>
                             </div>
                         </div>
-                        <div class="card col-3">
+                        <div class="card col-5 col-md-3">
                             <div class="img">
                                 <img src="img/4.jpg" alt="">
                             </div>
@@ -140,7 +154,7 @@
                                 <p>Product Lead</p>
                             </div>
                         </div>
-                        <div class="card col-3">
+                        <div class="card col-5 col-md-3">
                             <div class="img">
                                 <img src="img/6.jpg" alt="">
                             </div>
@@ -155,7 +169,7 @@
                                 <p>Photographer</p>
                             </div>
                         </div>
-                        <div class="card col-3">
+                        <div class="card col-5 col-md-3">
                             <div class="img">
                                 <img src="img/7.jpg" alt="">
                             </div>
@@ -170,7 +184,7 @@
                                 <p>Photographer</p>
                             </div>
                         </div>
-                        <div class="card col-3">
+                        <div class="card col-5 col-md-3">
                             <div class="img">
                                 <img src="img/8.jpg" alt="">
                             </div>
@@ -185,7 +199,7 @@
                                 <p>UX Manager</p>
                             </div>
                         </div>
-                        <div class="card col-3">
+                        <div class="card col-5 col-md-3">
                             <div class="img">
                                 <img src="img/9.jpg" alt="">
                             </div>
@@ -201,7 +215,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bottomSection col-4">
+                    <div class="bottomSection col-6 col-md-4">
                         <button class="btn">
                             view all Speaker<i class="fa-solid fa-arrow-right-long"></i>
                         </button>
@@ -219,15 +233,15 @@
                         <h4>Schedule Plan</h4>
                     </div>
                     <div class="content row col-12">
-                        <div class="headBtn row col-6">
+                        <div class="headBtn row col-10 col-md-10 col-lg-6">
                             <div class="day col-4 left">Monday<span>January 14, 2019</span></div>
                             <div class="day col-4">Tuesday<span>January 15, 2019</span></div>
                             <div class="day col-4 right">Wednesday<span>January 16, 2019</span></div>
                         </div>
                     </div>
                     <div class="secs row col-12">
-                        <div class="sec col-8 row">
-                            <div class="info row col-4">
+                        <div class="sec col-10 col-md-10 col-lg-8 row">
+                            <div class="info row col-12 col-md-12 col-lg-4">
                                 <div class="img col-10">
                                     <img src="img/10.jpg" alt="">
                                 </div>
@@ -236,17 +250,17 @@
                                     <p>by Gary <span>Armstrong</span> / Ceo of Confer</p>
                                 </div>
                             </div>
-                            <div class="details col-4">
+                            <div class="details col-12 col-md-12 col-lg-4">
                                 <p><span><i class="fa-regular fa-clock"></i></span>12-14 Jan 2019</p>
                                 <p><span><i class="fa-solid fa-map"></i></span>Mountain Resort, Phoenix, USA</p>
                             </div>
-                            <div class="col-3 btnContain">
+                            <div class="col-6 col-md-6 col-lg-3 btnContain">
                                 <button class="btn">view more<span><i class="fa-solid fa-arrow-right-long"></i></span>
                                 </button>
                             </div>
                         </div>
-                        <div class="sec col-8 row">
-                            <div class="info row col-4">
+                        <div class="sec col-10 col-md-10 col-lg-8 row">
+                            <div class="info row col-12 col-md-12 col-lg-4">
                                 <div class="img img col-10">
                                     <img src="img/11.jpg" alt="">
                                 </div>
@@ -255,18 +269,18 @@
                                     <p>by <span>Amanda Hudson</span> / Ceo of Confer</p>
                                 </div>
                             </div>
-                            <div class="details col-4">
+                            <div class="details col-12 col-md-12 col-lg-4">
                                 <p><span><i class="fa-regular fa-clock"></i></span>12-14 Jan 2019</p>
                                 <p><span><i class="fa-solid fa-map"></i></span>Mountain Resort, Phoenix, USA</p>
                             </div>
-                            <div class="col-3 btnContain">
+                            <div class="col-6 col-md-6 col-lg-3 btnContain">
                                 <button class="btn">
                                     view more<span> <i class="fa-solid fa-arrow-right-long"></i></span>
                                 </button>
                             </div>
                         </div>
-                        <div class="sec col-8 row">
-                            <div class="info row col-4">
+                        <div class="sec col-10 col-md-10 col-lg-8 row">
+                            <div class="info row col-12 col-md-12 col-lg-4">
                                 <div class="img col-10">
                                     <img src="img/12.jpg" alt="">
                                 </div>
@@ -275,18 +289,18 @@
                                     <p>by <span>Martha Burke</span> / Ceo of Confer</p>
                                 </div>
                             </div>
-                            <div class="details col-4">
+                            <div class="details col-12 col-md-12 col-lg-4">
                                 <p><span><i class="fa-regular fa-clock"></i></span>12-14 Jan 2019</p>
                                 <p><span><i class="fa-solid fa-map"></i></span>Mountain Resort, Phoenix, USA</p>
                             </div>
-                            <div class="col-3 btnContain">
+                            <div class="col-6 col-md-6 col-lg-3 btnContain">
                                 <button class="btn">
                                     view more<span> <i class="fa-solid fa-arrow-right-long"></i></span>
                                 </button>
                             </div>
                         </div>
-                        <div class="sec col-8 row">
-                            <div class="info row col-4">
+                        <div class="sec col-10 col-md-10 col-lg-8 row">
+                            <div class="info row col-12 col-md-12 col-lg-4">
                                 <div class="img col-10">
                                     <img src="img/13.jpg" alt="">
                                 </div>
@@ -295,11 +309,11 @@
                                     <p>by <span>Jeffrey Morales</span> / Ceo of Confer</p>
                                 </div>
                             </div>
-                            <div class="details col-4">
+                            <div class="details col-12 col-md-12 col-lg-4">
                                 <p><span><i class="fa-regular fa-clock"></i></span>12-14 Jan 2019</p>
                                 <p><span><i class="fa-solid fa-map"></i></span>Mountain Resort, Phoenix, USA</p>
                             </div>
-                            <div class="col-3 btnContain">
+                            <div class="col-6 col-md-6 col-lg-3 btnContain">
                                 <button class="btn">
                                     view more<span> <i class="fa-solid fa-arrow-right-long"></i></span>
                                 </button>
@@ -320,7 +334,7 @@
                         <h4>Ticket Pricing</h4>
                     </div>
                     <div class="cards col-12 row">
-                        <div class="card col-3">
+                        <div class="card col-lg-3 col-md-3 col-8">
                             <div class="plan">
                                 <h6>Full pass</h6>
                             </div>
@@ -342,7 +356,7 @@
                             </div>
 
                         </div>
-                        <div class="card col-3">
+                        <div class="card col-lg-3 col-md-3 col-8">
                             <div class="plan">
                                 <h6>1 day pass</h6>
                             </div>
@@ -364,7 +378,7 @@
                             </div>
 
                         </div>
-                        <div class="card col-3">
+                        <div class="card col-lg-3 col-md-3 col-8">
                             <div class="plan">
                                 <h6>Group pass</h6>
                             </div>
@@ -400,28 +414,28 @@
                         <h4>OFFICIAL SPONSOR</h4>
                     </div>
                     <div class="boxes row col-10">
-                        <div class="box col-2">
+                        <div class="box col-md-2 col-5">
                             <img src="img/p-1.png" alt="">
                         </div>
-                        <div class="box col-2">
+                        <div class="box col-md-2 col-5">
                             <img src="img/p-2.png" alt="">
                         </div>
-                        <div class="box col-2">
+                        <div class="box col-md-2 col-5">
                             <img src="img/p-3.png" alt="">
                         </div>
-                        <div class="box col-2">
+                        <div class="box col-md-2 col-5">
                             <img src="img/p-4.png" alt="">
                         </div>
-                        <div class="box col-2">
+                        <div class="box col-md-2 col-5">
                             <img src="img/p-5.png" alt="">
                         </div>
-                        <div class="box col-2">
+                        <div class="box col-md-2 col-5">
                             <img src="img/p-6.png" alt="">
                         </div>
-                        <div class="box col-2">
+                        <div class="box col-md-2 col-5">
                             <img src="img/p-7.png" alt="">
                         </div>
-                        <div class="box col-2">
+                        <div class="box col-md-2 col-5">
                             <img src="img/p-8.png" alt="">
                         </div>
                     </div>
@@ -439,7 +453,7 @@
                         <h4>Latest news</h4>
                     </div>
                     <div class="cards row col-10">
-                        <div class="card col-3">
+                        <div class="card col-10 col-md-10 col-lg-3">
                             <div class="img">
                                 <img src="img/18.jpg" alt="">
                             </div>
@@ -454,7 +468,7 @@
                                     food.</p>
                             </div>
                         </div>
-                        <div class="card col-3">
+                        <div class="card col-10 col-md-10 col-lg-3">
                             <div class="img">
                                 <img src="img/19.jpg" alt="">
                             </div>
@@ -469,7 +483,7 @@
                                     food.</p>
                             </div>
                         </div>
-                        <div class="card col-3">
+                        <div class="card col-10 col-md-10 col-lg-3">
                             <div class="img">
                                 <img src="img/20.jpg" alt="">
                             </div>
@@ -498,7 +512,7 @@
                         <h4>Contact us</h4>
                     </div>
                     <div class="contactInsider col-8 row">
-                        <div class="contactForm col-6">
+                        <div class="contactForm col-md-10 col-lg-6 col-10">
                             <form>
                                 <h4>contact form</h4>
                                 <div class="form-floating mb-3">
